Fix HTML structure and update stylesheet links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alamgir  Hossain</title>
     <!-- for mobile -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- for tablet -->
-     <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 568px)">
+     <link rel="stylesheet" href="tablet.css" media="screen and (min-width: 568px)">
 
     <!-- for desktop -->
-    <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 992px)">
+    <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 992px)">
 
     <!-- font awesome --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
@@ -24,7 +24,7 @@
     <!-- navbar stars -->
     <nav>
         <div class="nav-logo col-lg-1 col-md-2">
-            <img src="images/profile.jpg" alt="logo">
+            <img src="profile.jpg" alt="logo">
         </div>
         <div class="nav-heading col-lg-6 col-md-5">
         <a href="#"><h2>ALAMGIR HOSSAIN</h2></a>
@@ -41,7 +41,7 @@
 
     <!-- profile starts -->
     <div class="profile" id="portfolio">
-        <img class="top-weather-icon" src="images/weather-2.png" alt="weather image">
+        <img class="top-weather-icon" src="weather-2.png" alt="weather image">
         <div class="profile-desc">
             <h1>I'm Web Designer<br>&<br>Full Stack Developer (In Progress)</h1>
             <p>
@@ -60,7 +60,7 @@
                 I learn along the way. Thanks for stopping by!
             </p> 
         </div>
-        <img class="bottom-weather-icon" src="images/weather-2.png" alt="weather-image">
+        <img class="bottom-weather-icon" src="weather-2.png" alt="weather-image">
     </div>
     <!-- profile ends -->
 
@@ -68,7 +68,7 @@
     <div class="about" id="about">
         <h2>About me</h2>
         <div class="about-image col-lg-6">
-            <img src="images/profile.jpg" alt="profile-image">
+            <img src="profile.jpg" alt="profile-image">
         </div>
         <div class="info col-lg-6">
             <p>
@@ -106,7 +106,7 @@
         <div class="work-experience col-lg-4">
             <div class="card">
                 <div class="card-icon">
-                    <img class="rounded-icon" src="images/work-2.png" alt="work image">
+                    <img class="rounded-icon" src="work-2.png" alt="work image">
                 </div>
                 <div class="card-title">
                     <h2>WORK EXPERIENCE</h2>
@@ -148,7 +148,7 @@
         <div class="education col-lg-4">
             <div class="card">
                 <div class="card-icon">
-                    <img class="rounded-icon" src="images/book.png" alt="work image">
+                    <img class="rounded-icon" src="book.png" alt="work image">
                 </div>
                 <div class="card-title">
                     <h2>EDUCATION & TRAINING</h2>
@@ -190,7 +190,7 @@
         <div class="skills col-lg-4" id="skills">
             <div class="card">
                 <div class="card-icon">
-                    <img class="rounded-icon" src="images/skills.png" alt="work image">
+                    <img class="rounded-icon" src="skills.png" alt="work image">
                 </div>
                 <div class="card-title">
                     <h2>SKILLS</h2>
@@ -277,4 +277,5 @@
     </footer>
     <!-- footer ends -->
 </body>
+
 </html>
